--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,6 +49,7 @@
   {% endif %}
 
   {{ seo_tags }}
+  <meta name="naver-site-verification" content="c05c45790acc44846aeaed605447f440204fb997" />
 
   <title>
     {%- unless page.layout == 'home' -%}
